k8s/deployment.yaml
### Backend Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sejutacita
spec:
  selector:
    matchLabels:
      app: sejutacita
  template:
    metadata:
      labels:
        app: sejutacita
    spec:
      containers:
        - name: sejutacita
          imagePullPolicy: Always
          image: asia-southeast2-docker.pkg.dev/percobaan-gke/sejutacita/sejutacita:latest
          ports:
            - containerPort: 3000
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:5.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: sejutacita-pvc
              mountPath: /data/mongo
      volumes:
        - name: sejutacita-pvc
          persistentVolumeClaim:
            claimName: sejutacita-pvc
