k8s/service.yaml
### Backend Service
---
apiVersion: v1
kind: Service
metadata:
  name: sejutacita
  annotations:
    cloud.google.com/backend-config: '{"default": "sejutacita"}'
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: sejutacita
  selector:
    app: sejutacita
  type: LoadBalancer


### Mongodb Service
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: LoadBalancer
