k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sejutacita-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "true"
spec:
  defaultBackend:
    service:
      name:  sejutacita
      port:
        number: 80
  #here where we mapped the tls cert from kubernetes secret
  tls:
  - secretName: ssl-name
  rules:
  - host: sejutacita.gilbran
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific  
        backend:
          service:
            name: sejutacita
            port:
              number: 80
